# agent-proj

./: .env  Dockerfile  QUICK_START.md  README.md  docker-compose.yml  keys.env  main.py  pyproject.toml  stategraph.py  web_api.py
agents/: agents.py  tools.py  tools_conflict_backup.py
agents/tools/: tools.py
deployment/: deployer.py
evaluation/: __init__.py  evaluator.py
observability/: __init__.py  phoenix_tracer.py
