[project]
name = "agent-proj"
version = "0.2.0"
description = "Multi-agent travel planning system with Phoenix observability, Nemo deployment, and comprehensive evaluation (FREE APIs only)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=4.0.0",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "onnxruntime>=1.23.2",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pydantic>=2.10.*",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "requests>=2.31.0",
    "torch>=2.9.1",
]
